--- a/recitation/gcomp-R-and-SAS-recitation.Rmd
+++ b/recitation/gcomp-R-and-SAS-recitation.Rmd
@@ -10,7 +10,7 @@ output:
    number_sections: true
 ---
 
-**NOTE: ALL SAS and R code below copied from EPID 722 lecture material, 2015&2016. R code based on Alan Brookhart's program titled, "Gcomp.R", and Xiaojuan Li's 2015 SAS program titled, "g-comp.sas"**
+**NOTE: ALL SAS and R code below copied from EPID 722 lecture material, from 2015 and 2016. R code based on Alan Brookhart's program titled, "Gcomp.R", and Xiaojuan Li's 2015 SAS program titled, "g-comp.sas". Bootstrap code by Alan Brookhart.**
 
 ```{r setup, echo=FALSE}
 # see http://stackoverflow.com/questions/24585254/working-with-knitr-using-subdirectories
@@ -19,34 +19,30 @@ output:
   #opts_chunk$set(fig.path = "../figures/", dev='pdf') # corrected path and added dev
 ```
 
+# G-computation
+
 ## Preliminaries
 
 ### Specify packages for R
 
 ```{r, echo=T, message=FALSE, warning=FALSE}
-require(knitr)
+  #install.packages("geepack")
 require(foreign)
-require(foreach)
+library(boot)
+library(foreign)
+library(geepack)
+
 set.seed(123) # set seed so you get same results each time you run.
 ```
 
 ```{r, echo=FALSE}
 saspath <- 'C:/Program Files/SASHome/SASFoundation/9.4/sas.exe'
-sasopts <- "-nosplash -log 'c:\\temp'  -ls 75" # see http://bit.ly/1QB4ZTb
+sasopts <- "-nosplash -log 'c:\\temp'  -ls 80 -ps 60  -nocenter -nodate" # see http://bit.ly/1QB4ZTb
 ```
 
 
 ## Read in NAMCS data -- will need to correct the path
 
-### R
-
-```{r}
-#getwd() # get the working directory
-ns=read.dta("../data/nsaid008b.dta") # read in data. relative to the working directory go up 1 level and into 'data' folder to read data. 
-# Otherwise specify full path of data location. for example a path could be c:\temp\nsaid008b.dta
-class(ns) # check type of object
-head(ns) # default is first six rows of data frame
-```
 
 ### SAS
 
@@ -60,20 +56,17 @@ proc print data = dat.nsaid008b(obs=10);
 run; quit;
 ```
 
-## Simulate outcome using logistic regression
-
 ### R
 
-```{r, r-part1}
-ns$pbleed=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
-                    .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
-                    .02*ns$raceblkoth- .3*ns$newcox2 )))
-
-ns$bleed=rbinom(size=1,n=nrow(ns),p=ns$pbleed)
-
-rbind(percent=round(prop.table(table(ns$bleed)),2),
-      count=table(ns$bleed)) # quick and dirty way to get proportions
+```{r}
+#getwd() # get the working directory
+ns=read.dta("../data/nsaid008.dta") # read in data. relative to the working directory go up 1 level and into 'data' folder to read data. 
+# Otherwise specify full path of data location. for example a path could be c:\temp\nsaid008b.dta
+class(ns) # check type of object
+head(ns) # default is first six rows of data frame
 ```
+
+## Simulate outcome using logistic regression
 
 ### SAS
 <!-- Note: I have to put libname in each SAS chunk because this is running it in batch mode.
@@ -95,23 +88,21 @@ proc freq data = dat.ns;
 run;
 ```
 
-## What is E[Y(1)]-E[Y(0)], causal risk difference, and  E[Y(1)]/E[Y(0)], causal risk ratio.
-
 ### R
 
-```{r r-part2}
-pbleed.0=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
-                       .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
-                       .02*ns$raceblkoth)))
+```{r, r-part1}
+ns$pbleed=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
+                    .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
+                    .02*ns$raceblkoth- .3*ns$newcox2 )))
 
-pbleed.1=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
-                      .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
-                      .02*ns$raceblkoth - 0.3)))
+ns$bleed=rbinom(size=1,n=nrow(ns),p=ns$pbleed)
 
-mean(pbleed.1)-mean(pbleed.0) # causal risk difference
-
-mean(pbleed.1)/mean(pbleed.0) # causal risk ratio
+rbind(percent=round(prop.table(table(ns$bleed)),2),
+      count=table(ns$bleed)) # quick and dirty way to get proportions
 ```
+
+## What is E[Y(1)]-E[Y(0)], causal risk difference, and  E[Y(1)]/E[Y(0)], causal risk ratio.
+
 
 ### SAS
 
@@ -143,6 +134,23 @@ DATA b1;
 proc print data = b1; run;
 ```
 
+### R
+
+```{r r-part2}
+pbleed.0=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
+                       .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
+                       .02*ns$raceblkoth)))
+
+pbleed.1=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
+                      .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
+                      .02*ns$raceblkoth - 0.3)))
+
+mean(pbleed.1)-mean(pbleed.0) # causal risk difference
+
+mean(pbleed.1)/mean(pbleed.0) # causal risk ratio
+```
+
+
 ## What is E[Y(1)|X=1]-E[Y(0)|X=1]?
 
 ### R 
@@ -172,12 +180,6 @@ proc print data=me_trt1;
 
 ## What is E[Y(1)|contanticoag=1] - E[Y(0)|contanticoag=1]?
 
-### R
-
-```{r r-part4}
-mean(pbleed.1[ns$contanticoag==1])-mean(pbleed.0[ns$contanticoag==1])
-```
-
 ### SAS 
 
 ```{r s-part4, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
@@ -198,23 +200,14 @@ proc print data=me_cont1;
 run;
 ```
 
-## What is E[Y(treat on if on warfarin)]-E[Y(0)]?
-
 ### R
 
-```{r r-part5}
-newtreat=ifelse(ns$contanticoag==1,1,0)
-
-pbleed.0=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
-                      .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
-                      .02*ns$raceblkoth)))
-
-pbleed.1=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
-                      .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
-                      .02*ns$raceblkoth - 0.3*newtreat)))
-
-mean(pbleed.1)-mean(pbleed.0)
+```{r r-part4}
+mean(pbleed.1[ns$contanticoag==1])-mean(pbleed.0[ns$contanticoag==1])
 ```
+
+## What is E[Y(treat on if on warfarin)]-E[Y(0)]?
+
 
 ### SAS
 
@@ -244,29 +237,24 @@ proc print data=me_war1;
 run;
 ```
 
-## Estimate E[Y(1)]-E[Y(0)] with MLE?
-
 ### R
 
-**Estimate coefficients**
+```{r r-part5}
+newtreat=ifelse(ns$contanticoag==1,1,0)
 
-```{r part6}
-glm.out=glm(bleed~contanticoag+tobacco_imp+contsteroids+contaspirin+arthrtis+age+male+raceblkoth+newcox2,family=binomial,data=ns)
+pbleed.0=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
+                      .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
+                      .02*ns$raceblkoth)))
 
-coef(glm.out) # show coefficients from fitted generalized linear model
-```
-
-**Predict outcome based on estimated coefficients from glm.out regression object**
-
-```{r}
-ns.temp=ns
-ns.temp$newcox2=0
-pbleed.0=predict(glm.out,newdata=ns.temp,type="response")
-ns.temp$newcox2=1
-pbleed.1=predict(glm.out,newdata=ns.temp,type="response")
+pbleed.1=1/(1+exp(-(-6.75 + .6*ns$contanticoag + 1*ns$tobacco_imp + .5*ns$contsteroids + 
+                      .2*ns$contaspirin + .7*ns$arthrtis + .07*ns$age + .3*ns$male + 
+                      .02*ns$raceblkoth - 0.3*newtreat)))
 
 mean(pbleed.1)-mean(pbleed.0)
 ```
+
+## Estimate E[Y(1)]-E[Y(0)] with MLE?
+
 
 ### SAS
 ```{r s-part6, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
@@ -306,6 +294,261 @@ run;
 
 proc print data=me_mle1;
    title "estimates with MLE";
+run;
+```
+
+### R
+
+**Estimate coefficients**
+
+```{r part6}
+glm.out=glm(bleed~contanticoag+tobacco_imp+contsteroids+contaspirin+arthrtis+age+male+raceblkoth+newcox2,family=binomial,data=ns)
+
+coef(glm.out) # show coefficients from fitted generalized linear model
+```
+
+**Predict outcome based on estimated coefficients from glm.out regression object**
+
+```{r}
+ns.temp=ns
+ns.temp$newcox2=0
+pbleed.0=predict(glm.out,newdata=ns.temp,type="response")
+ns.temp$newcox2=1
+pbleed.1=predict(glm.out,newdata=ns.temp,type="response")
+
+mean(pbleed.1)-mean(pbleed.0)
+```
+
+---
+
+# G-computation with bootstrap
+
+## Resamples
+
+
+### SAS
+
+```{r s-part7, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+*simulate outcome using logistic regression and find prob of bleed;
+DATA ns;
+   SET dat.nsaid008;
+   pbleed=1/(1+exp(-(-6.75 + 0.6*contanticoag + 1*tobacco_imp + 0.5*contsteroids + 
+                    0.2*contaspirin + 0.7*arthrtis + 0.07*age + 0.3*male + 
+                    .02*raceblkoth- .3*newcox2 )));
+   call streaminit(1235); * NOTE: this is a slightly different seed than before;
+   bleed=rand("bernoulli",pbleed);   *simulate the observed outcome;
+run;
+
+%let varlist = bleed contanticoag tobacco_imp contsteroids contaspirin arthrtis age male raceblkoth newcox2;
+
+proc surveyselect data=ns(keep=&varlist.) out=dat.ns_boot
+        seed=1234 
+        method=urs
+        samprate=1
+        outhits
+        rep=500; *500 bootstrap resamples of original dataset;
+run; quit;
+```
+
+### R
+
+```{r}
+set.seed(101)
+```
+
+```{r r-part7a}
+# re-do data sim w/ different seed in the bootstrap.R code
+ns$pbleed=1/(1+exp(-(-6.75 + 0.6*ns$contanticoag + 1*ns$tobacco_imp + 0.5*ns$contsteroids + 0.2*ns$contaspirin + 0.7*ns$arthrtis + 0.07*ns$age + 0.3*ns$male + 0.02*ns$raceblkoth - 0.3*ns$newcox2 )))
+
+ns$bleed=rbinom(size=1,n=nrow(ns),p=ns$pbleed)
+
+# G-computation wrapper function for risk ratio (rr)
+
+g.comp.rr = function(dat, indices)
+{
+  dat=dat[indices,]
+  glm.out = glm(bleed ~ contanticoag + tobacco_imp + contsteroids + contaspirin + arthrtis + age + male + raceblkoth + newcox2,
+                family=binomial(link="logit"), 
+                data=dat)
+  dat.temp=dat
+  dat.temp$newcox2=0
+  pbleed.0=predict(glm.out,newdata=dat.temp,type="response")
+  dat.temp$newcox2=1
+  pbleed.1=predict(glm.out,newdata=dat.temp,type="response")  
+  return(mean(pbleed.1)/mean(pbleed.0))
+}
+
+# G-computation wrapper function for risk difference (rd)
+
+g.comp.rd = function(dat, indices)
+{
+  dat=dat[indices,]
+  glm.out = glm(bleed ~ contanticoag + tobacco_imp + contsteroids + contaspirin + arthrtis + age + male + raceblkoth + newcox2,
+                family=binomial(link="logit"), 
+                data=dat)
+  dat.temp=dat
+  dat.temp$newcox2=0
+  pbleed.0=predict(glm.out,newdata=dat.temp,type="response")
+  dat.temp$newcox2=1
+  pbleed.1=predict(glm.out,newdata=dat.temp,type="response")  
+  return(mean(pbleed.1)-mean(pbleed.0))
+}
+```
+
+```{r r-part7b}
+# Draw 100 bootstrap sample estimates of rr
+  boot.out.rr = boot(ns, g.comp.rr, 100)
+```
+
+```{r r-part7c}
+# Draw 100 bootstrap sample estimates of rd
+  boot.out.rd = boot(ns, g.comp.rd, 100)
+```
+
+## Get estimates for each of the samples above by replicate
+
+### SAS
+
+```{r s-part8, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+  ods select none;
+  proc genmod data = dat.ns_boot desc;
+  	by replicate; 
+      model bleed = contanticoag tobacco_imp contsteroids contaspirin arthrtis age male raceblkoth newcox2 / link=logit dist=bin;
+      ods output parameterestimates = dat.betas3(keep = replicate parameter estimate);
+  run;
+  ods select all;
+```
+
+
+## Take the parameter estimates and merge back onto the data file
+
+### SAS
+
+```{r s-part9, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+proc transpose data=dat.betas3 out=betas4(drop=beta11) prefix=beta; *this makes the set of gamma horizontal;
+by replicate;
+run;
+
+data dat.ns_pboot;
+merge betas4 dat.ns_boot;
+by replicate;
+run;
+```
+
+## Generate the probability of bleeding according to all exposed or all unexposed.
+
+### SAS
+
+```{r s-part10, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+data dat.ns_pboot; set dat.ns_pboot;
+   by replicate; 
+   pbleed_1 = 1/(1+exp(-(beta1 + beta2*contanticoag + beta3*tobacco_imp + beta4*contsteroids + 
+                       beta5*contaspirin + beta6*arthrtis + beta7*age + beta8*male + 
+                       beta9*raceblkoth + beta10*1)));  *E[Y(1)];
+   pbleed_0 = 1/(1+exp(-(beta1 + beta2*contanticoag + beta3*tobacco_imp + beta4*contsteroids + 
+                       beta5*contaspirin + beta6*arthrtis + beta7*age + beta8*male + 
+                       beta9*raceblkoth + beta10*0)));  *E[Y(0)];
+run;
+
+```
+
+## Get means of each of these estimated probability by replicate
+
+### SAS
+```{r s-part11, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+proc means data = dat.ns_pboot noprint;
+	 by replicate;
+     var pbleed_1 pbleed_0;
+	 output out=dat.me_mleboot mean=upbleed_1 upbleed_0;
+run;
+
+```
+
+## Take the means and get risk difference and risk ratio estimates
+
+### SAS
+
+```{r s-part12, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+DATA dat.me_mleboot1; set dat.me_mleboot;
+	RD = upbleed_1 - upbleed_0;
+	RR = upbleed_1/upbleed_0;
+run;
+
+```
+
+## Get risk difference and 95 percent confidence intervals
+
+
+### SAS
+
+```{r s-part13, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+proc univariate data=dat.me_mleboot1 noprint;
+	var rd;
+	output out=percentiles mean=mean pctlpts=2.5 97.5 pctlpre=P;
+run;
+
+proc print data=percentiles;
+title 'RD and 95% CI (bootstrap)';
+run;
+
+```
+
+### R
+
+```{r r-part13}
+# compute confidence intervals using percentile method
+boot.ci(boot.out.rd,type="perc",conf=0.95)
+mean(boot.out.rd$t)
+```
+
+## Get risk ratio and 95 percent confidence intervals
+
+### SAS
+
+```{r s-part14, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+proc univariate data=dat.me_mleboot1 noprint;
+	var rr;
+	output out=percentiles2 mean=mean pctlpts=2.5 97.5 pctlpre=P;
+run;
+
+proc print data=percentiles2;
+title 'RR and 95% CI (bootstrap)';
+run;
+```
+
+### R
+
+```{r r-part1r}
+# compute confidence intervals using percentile method
+boot.ci(boot.out.rr,type="perc",conf=0.95)
+mean(boot.out.rr$t)
+```
+
+## Descriptives
+
+### SAS 
+
+```{r s-part15, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname dat "c:\temp";
+
+proc kde data=dat.me_mleboot1;
+ univar rd;
 run;
 ```
 
